css/styles.css
@import url(reset.css);

body {
    font-family: "klavika-web", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
}

.slide, .object {
    font-size: 2em;
    z-index: 1;
}

.object {
    z-index: 2;
}

.table li {
    display: inline-block;
    width: 300px;
    padding: 10px;
}

.table a:link,
.table a:visited,
.table a:hover {
    display: inline-block;
    width: 300px;
    color: #333;
    text-decoration: none;
    margin-bottom: 30px;
}

.table a:hover {
    color: #777;
}

.table {
    list-style-type: none;
    padding: 0;
    font-size: 20pt;
    z-index: 5;
    position: absolute;
}

#slide1 {
    background-image: url('../img/notebook.png');
}

#slide2 {
    background-image: url('../img/snow.png');
    z-index: 3;
}

#slide3 {
    background-image: url('../img/geometry.png');
}

#slide4 {
    background-image: url('../img/rice.png');
}

#slide5 {
    z-index: 2;
}

#slide6 {
    background-image: url('../img/snow.png');
}

#slide7 {
    background-image: url('../img/notebook.png');
}

#slide8 {
    background-image: url('../img/geometry.png');
}

#slide9 {
    background-image: url('../img/brushed.png');
}

#slide10 {
    background-image: url('../img/sandpaper.png');
}

#slide11 {
    background-image: url('../img/pixel.png');
}

#slide12 {
    background-image: url('../img/sprinkles.png');
}

#slide13 {
    background-image: url('../img/paper.png');
}

#slide14 {
    background-image: url('../img/rice.png');
}

#slide15 {
    background-image: url('../img/fabric.png');
}

#picture {
    left: 200px;
    width: 100px;
    height: 100px;
    background-color: black;
}

h1 {
    font-size: 50pt;
}

.center {
    position: absolute;
    width: 1000px;
    left: 50%;
    margin-left: -500px;
}

.logo {
    position: absolute;
    width: 400px;
    height: 140px;
    top: 30%;
    left: 50%;
    margin-left: -200px;
    margin-top: -70px;
}

.subtitle {
    position: absolute;
    width: 400px;
    height: 50px;
    top: 30%;
    left: 50%;
    margin-left: -100px; /* margin is -0.5 * dimension */
    margin-top: 70px;
    font-size: 20pt;
}

.problems {
    position: absolute;
    top: 50%;
    left: 55%;
}

.small-img {
    height: 60%;
    width: auto;
}

.smaller-img {
    height: 40%;
    width: auto;
}

.image {
    position: absolute;
    height: auto;
    width: 50%;
    opacity: 0.6;
    z-index: -1;
}

p .popover {
    max-width: 500px;
    width: 500px;
    z-index: 5;
    position: absolute;
    top: -200px;
    left: 300px;
}

.arrow {
    display: none !important;
}

.popover-img {
    width: 100%;
    z-index: 4;
}

.point {
    position: absolute;
    line-height: 2em;
}

.purple {
    color: purple;
    font-weight: bold;
}

.gray {
    color: gray;
    margin-top: 1%;
    margin-left: 2%;
    font-size: 14pt;
}

.bold {
    font-weight: bold;
}

.title {
    position: absolute;
    width: 1000px;
    height: 100px;
    top: 10%;
    left: 50%;
    margin-left: -500px; /* margin is -0.5 * dimension */
    margin-top: -50px;
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    z-index: 5;
}

.clue {
    font-size: 10pt;
    font-style: italic;
}

.small {
    font-size: 16pt;
    opacity: 0.5;
    color: blue;
}

.medium {
    font-size: 22pt;
    opacity: 0.5;
    color: blue;
}

.large {
    font-size: 26pt;
    opacity: 0.5;
    color: blue;
}

ul {
    list-style-type: circle;
}

.right-1 {
    margin-right: 10%;
}
.right-7 {
    margin-right: 70%;
}
.right-6 {
    margin-right: 60%;
}
.right-4 {
    margin-right: 40%;
}
.right-5 {
    margin-right: 50%;
}

.left-tiny {
    left: 5%;
}
.left-1 {
    left: 10%;
}
.left-2 {
    left: 20%;
}
.left-3 {
    left: 30%;
}
.left-4 {
    left: 40%;
}
.left-5 {
    left: 50%;
}
.left-6 {
    left: 60%;
}
.left-7 {
    left: 70%;
}
.left-8 {
    left: 80%;
}
.left-9 {
    left: 90%;
}
.left-0 {
    left: 100%;
}

.top-1 {
    top: 10%;
}
.top-2 {
    top: 20%;
}
.top-3 {
    top: 30%;
}
.top-4 {
    top: 40%;
}
.top-5 {
    top: 50%;
}
.top-6 {
    top: 60%;
}
.top-7 {
    top: 70%;
}
.top-8 {
    top: 80%;
}
.top-9 {
    top: 90%;
}
.top-0 {
    top: 100%;
}

